# manager_utils

./: .gitmodules  CMakeLists.txt  README.md  manager_utilsConfig.cmake  package.xml
include/manager_utils/drawing/: CreditRotation.h  DynamicImage.h  Fbo.h  Image.h  NumberCounter.h  Sprite.h  SpriteBuffer.h  Text.h  Widget.h
include/manager_utils/drawing/animation/: AnimationBase.h  AnimationEndCb.h  AnimationEndCb.hpp  FrameAnimation.h  PositionAnimation.h  PulseAnimation.h  RotationAnimation.h
include/manager_utils/drawing/animation/defines/: AnimationDefines.h  CommonAnimationStructs.h
include/manager_utils/input/: ButtonBase.h  Scroller.h
include/manager_utils/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h  SoundMgr.h  TimerMgr.h
include/manager_utils/managers/config/: DrawMgrConfig.h  DrawMgrConfig.hpp  ManagerHandlerConfig.h  ManagerHandlerConfig.hpp
include/manager_utils/managers_base/: DrawMgrBase.h  MgrBase.h  RsrcMgrBase.h  SoundMgrBase.h  TimerMgrBase.h
include/manager_utils/managers_base/config/: DrawMgrBaseConfig.hpp  ManagerHandlerConfig.hpp
include/manager_utils/sound/: Music.h  Sound.h  SoundWidget.h  SoundWidgetEndCb.h  SoundWidgetEndCb.hpp
include/manager_utils/time/: TimerClient.h  TimerClientSpeedAdjustable.h  UserTimerClient.h
include/manager_utils/time/defines/: TimerClientDefines.h
src/drawing/: CreditRotation.cpp  DynamicImage.cpp  Fbo.cpp  Image.cpp  NumberCounter.cpp  Sprite.cpp  SpriteBuffer.cpp  Text.cpp  Widget.cpp
src/drawing/animation/: AnimationBase.cpp  FrameAnimation.cpp  PositionAnimation.cpp  PulseAnimation.cpp  RotationAnimation.cpp
src/drawing/animation/defines/: CommonAnimationStructs.cpp
src/input/: ButtonBase.cpp  Scroller.cpp
src/manager_utils/drawing/: CreditRotation.cpp  DynamicImage.cpp  Image.cpp  Sprite.cpp  SpriteBuffer.cpp  Text.cpp  Widget.cpp
src/manager_utils/drawing/animation/: AnimationBase.cpp  FrameAnimation.cpp  PositionAnimation.cpp  PulseAnimation.cpp  RotationAnimation.cpp
src/manager_utils/drawing/animation/defines/: CommonAnimationStructs.cpp
src/manager_utils/input/: ButtonBase.cpp  Scroller.cpp
src/manager_utils/managers_base/: DrawMgrBase.cpp  RsrcMgrBase.cpp  SoundMgrBase.cpp  TimerMgrBase.cpp
src/manager_utils/sound/: SoundWidget.cpp
src/manager_utils/time/: TimerClient.cpp  TimerClientSpeedAdjustable.cpp  UserTimerClient.cpp
src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp  SoundMgr.cpp  TimerMgr.cpp
src/managers_base/: DrawMgrBase.cpp  ManagerHandler.cpp  RsrcMgrBase.cpp  TimerMgrBase.cpp
src/sound/: Music.cpp  Sound.cpp  SoundWidget.cpp
src/time/: TimerClient.cpp  TimerClientSpeedAdjustable.cpp  UserTimerClient.cpp
